--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <div>
                 <a href="" class="button"><i class="fa-solid fa-globe fa-flip"></i> ETEC</a>
                 <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i> Instagram</a>
+                <a href="" class="button"><i class="fa-brands fa-facebook fa-flip"></i> Facebook</a>
             </div>
 
         </div>
